# opx-cps

./: .gitreview  Makefile  Makefile.am  README.md  a.out  configure.ac  init.cfg  package.cfg
.ci/: build.yaml
.github/: CODEOWNERS
cfg/: Makefile
cfg/init/: cps_api_service.conf
debian/: changelog  control  copyright  opx-cps.install  opx-cps.postinst  opx-cps.postrm  opx-cps.preinst  opx-cps.prerm  opx-cps.upstart  opx-yang-utils-dev.install  python-opx-cps.install  rules
doc/: README.txt  User_README.txt  cps_gen_doc.sh  cps_py.awk  doxygen.cfg  doxygen_c.cfg  doxygen_python.cfg  footer.html  layout.xml  layout_c_cpp.xml  layout_python.xml  rtfextensions.cfg
history/: dell-base-cps.yhist
inc/: Makefile.am  cps_api_attributes.h  cps_api_db_interface.h  cps_api_db_interface_tools.h  cps_api_errors.h  cps_api_event_init.h  cps_api_events.h  cps_api_interface.h  cps_api_interface_defaults.h  cps_api_interface_types.h  cps_api_key.h  cps_api_l2_types.h  cps_api_mirroring.h  cps_api_node.h  cps_api_object.h  cps_api_object_attr.h  cps_api_object_category.h  cps_api_object_internal.h  cps_api_object_key.h  cps_api_object_tools.h  cps_api_operation.h  cps_api_operation_debug.h  cps_api_operation_stats.h  cps_api_operation_tools.h  cps_api_qos.h  cps_api_route.h  cps_api_service.h  cps_class_map.h  cps_key_internals.h  db_acl_action.h  db_acl_actions.h  db_acl_qualifier.h  db_acl_qualifier_mask_union.h  db_acl_qualifier_masks.h  db_acl_qualifiers.h  db_acl_types.h  db_common_list.h  db_common_types.h  db_event_api.h  db_event_channel.h  (+22 more)
inc/opx/: cps_api_db_interface.h  cps_api_db_interface_tools.h  cps_api_errors.h  cps_api_event_init.h  cps_api_events.h  cps_api_key.h  cps_api_node.h  cps_api_object.h  cps_api_object_attr.h  cps_api_object_category.h  cps_api_object_key.h  cps_api_object_tools.h  cps_api_operation.h  cps_api_operation_debug.h  cps_api_operation_stats.h  cps_api_operation_tools.h  cps_api_service.h  cps_class_map.h  cps_key_internals.h  dell-cps.h
inc/opx/private/: cps_api_client_utils.h  cps_api_core_utils.h  cps_api_key_cache.h  cps_api_key_utils.h  cps_api_metadata_import.h  cps_api_node_private.h  cps_api_object_internal.h  cps_api_object_tools_internal.h  cps_api_select_utils.h  cps_api_vector_utils.h  cps_class_map_query.h  cps_comm_utils.h  cps_dictionary.h  cps_ns.h  cps_string_utils.h
inc/opx/private/db/: cps_api_db.h  cps_api_db_connection.h  cps_api_db_connection_tools.h  cps_api_db_operations.h  cps_api_db_response.h  cps_api_node_set.h
inc/private/: cps_api_client_utils.h  cps_api_core_utils.h  cps_api_key_cache.h  cps_api_key_utils.h  cps_api_metadata_import.h  cps_api_node_private.h  cps_api_object_internal.h  cps_api_select_utils.h  cps_api_vector_utils.h  cps_class_map_query.h  cps_comm_utils.h  cps_dictionary.h  cps_ns.h  cps_string_utils.h  dell-cps.h
inc/private/db/: cps_api_db.h  cps_api_db_connection.h  cps_api_db_connection_tools.h  cps_api_db_operations.h  cps_api_db_response.h  cps_api_node_set.h  cps_redis_utils.h
man/man1/: cps_get_oid.py.1  cps_model_info.1  cps_set_oid.py.1  cps_trace_events.py.1
scripts/: Makefile  ar_parse_yang.sh
scripts/init/: opx-cps-connectivity.service  opx-cps-db.service  opx-cps.service  opx-environment
scripts/lib/: bytearray_utils.py  cps_connectivity_agent.py  cps_connectivity_utils.py  cps_data_store  cps_db_instance_manager.py  cps_db_manager.py  cps_db_stunnel_manager.py  cps_object.py  cps_operations.py  cps_stunnel_instance_manager.py  cps_utils.py  cps_utils_example.py
scripts/py/: ar_yin_reader.py  config_reader.py  object_history.py  yin_cps.py  yin_enum.py  yin_ns.py  yin_parser.py  yin_utils.py
src/: Makefile  a.out  cps_api_base_event_adapter.c  cps_api_base_event_adapter.cpp  cps_api_client_ipc.cpp  cps_api_core_utils.cpp  cps_api_events.cpp  cps_api_interface_common.cpp  cps_api_key.c  cps_api_key.cpp  cps_api_key_utils.cpp  cps_api_node.cpp  cps_api_object.cpp  cps_api_object_attr.cpp  cps_api_object_tools.cpp  cps_api_operation_common.cpp  cps_api_operation_debug.cpp  cps_api_operation_service.cpp  cps_api_operation_tools.cpp  cps_api_select_utils.cpp  cps_api_service.cpp  cps_api_utils.cpp  cps_api_vector_utils.cpp  cps_class_map.cpp  cps_class_map_query.cpp  cps_comm_utils.cpp  cps_dictionary.cpp  cps_dictionary_loader.cpp  cps_ns.cpp  cps_string_utils.cpp  db_common_list.cpp  db_event_service.c  db_interface_common.cpp  db_operation_common.cpp  dell-cps.cpp  ds_common_list.cpp  ds_event_service.c  ds_operation_common.cpp  test.cpp
src/db/: cps_api_core_utils.cpp  cps_api_db_connection.cpp  cps_api_db_connection_tools.cpp  cps_api_db_direct.cpp  cps_api_db_event_adapter.cpp  cps_api_db_events.cpp  cps_api_db_fast.cpp  cps_api_db_init.cpp  cps_api_db_node_set.cpp  cps_api_db_object_key.cpp  cps_api_db_operations.cpp  cps_api_db_pipeline.cpp  cps_api_db_response.cpp  cps_api_node_set.cpp  cps_redis.cpp
src/example/: cps_api_operation_example.c  dell-cps.h  dell-cps.yang
src/metadata/: cps_api_metadata_import.cpp  cps_api_string_mapping.cpp  cps_class_map_query.cpp  cps_dictionary.cpp  cps_dictionary_loader.cpp  dell-cps.cpp
src/non-core/: cps_api_db_direct.cpp  cps_api_db_interface_tools.cpp  cps_api_node.cpp  cps_api_object_tools.cpp  cps_api_operation_tools.cpp
src/python_extension/: cps_api_python.cpp  cps_api_python.h  cps_api_python_db_extension.cpp  cps_api_python_events.cpp  cps_api_python_operation.cpp  cps_api_python_utils.cpp  cps_example.py  op.py  reg.py  setup.py
src/std_event_service/: cps_api_base_event_adapter.cpp
src/unit_test/: README.md  cps_api_c_client_stub.c  cps_api_db_1_1_unittest.cpp  cps_api_db_connection_event_unittest.cpp  cps_api_db_direct_unittest.cpp  cps_api_db_event_unittest.cpp  cps_api_db_fill_unittest.cpp  cps_api_db_group_tunnel_unittest.cpp  cps_api_db_sync_unittest.cpp  cps_api_db_timings.cpp  cps_api_db_unittest.cpp  cps_api_event_loss_unittest.cpp  cps_api_events_unittest.cpp  cps_api_key_cache_unittest.cpp  run_test  (+13 more)
yang-model/: Makefile  dell-base-cps.yhist  dell-cps.yang
yang-models/: dell-cps.yang
(+27 files in other folders)
