
#All exported headers
nobase_include_HEADERS = opx/cps_api_errors.h opx/cps_api_event_init.h \
    opx/cps_api_events.h opx/cps_api_key.h opx/cps_api_object_attr.h \
    opx/cps_api_object_category.h opx/cps_api_object.h opx/cps_api_object_key.h \
    opx/cps_api_object_tools.h opx/cps_api_operation.h opx/cps_api_operation_stats.h \
    opx/cps_api_operation_tools.h opx/cps_api_service.h opx/cps_class_map.h \
    opx/cps_key_internals.h opx/dell-cps.h

