#
# Copyright (c) 2019 Dell Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License. You may obtain
# a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
#
# THIS CODE IS PROVIDED ON AN *AS IS* BASIS, WITHOUT WARRANTIES OR
# CONDITIONS OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT
# LIMITATION ANY IMPLIED WARRANTIES OR CONDITIONS OF TITLE, FITNESS
# FOR A PARTICULAR PURPOSE, MERCHANTABLITY OR NON-INFRINGEMENT.
#
# See the Apache Version 2.0 License for specific language governing
# permissions and limitations under the License.
#

#All exported headers
nobase_include_HEADERS = opx/cps_api_errors.h opx/cps_api_event_init.h \
    opx/cps_api_events.h opx/cps_api_key.h opx/cps_api_object_attr.h \
    opx/cps_api_object_category.h opx/cps_api_object.h opx/cps_api_object_key.h \
    opx/cps_api_object_tools.h opx/cps_api_operation.h opx/cps_api_operation_stats.h \
    opx/cps_api_operation_tools.h opx/cps_api_service.h opx/cps_class_map.h \
    opx/cps_key_internals.h opx/dell-cps.h opx/cps_api_db_interface.h \
    opx/cps_api_db_interface_tools.h opx/cps_api_node.h opx/cps_api_operation_debug.h

